Updates from Overleaf

--- a/SobolBayesCub-ver-b.tex
+++ b/SobolBayesCub-ver-b.tex
@@ -557,7 +557,7 @@ Digital sequences have a group structure under digitwise, element-by-element add
 	Then for all $i,j \in \naturals_0$,
 	\begin{gather}
 		\label{eqn:digital_net_symmetric_prop}
-	\vx_i \oplus \vx_i = \boldsymbol{ 0}, \qquad 
+	\vx_{i+1} \oplus \vx_{i+1} = \boldsymbol{0}, \qquad 
 	\vx_{i+1} \oplus \vx_{j+1} = \vx_{j+1} \oplus \vx_{i+1} \\
 	\label{eqn:digital_shift_prop}
 	\vx_{i+1} \oplus \vx_{j+1} = \vz_{i+1} \oplus \vz_{j+1} = \vz_{(i \oplus j) + 1 }.
