Updates from Overleaf

--- a/Sobol-Bayes-trimmed-2021.tex
+++ b/Sobol-Bayes-trimmed-2021.tex
@@ -332,6 +332,9 @@ Cubature, or numerical multivariate integration, is the problem of inferring a n
 $ \mu := \int_{\reals^d} g(\vx) \, \dif \vx$, where $\mu$ has no closed form analytic expression. Typically, $g$ is accessible through a black-box function routine. 
 Cubature is a key component of many problems in scientific computing, finance \cite{Gla03}, statistical modeling, imaging \cite{Keller2013}, uncertainty quantification, and machine learning \cite{Goodfellow-et-al-2016}. This article extends the fast Bayesian cubature ideas presented in \cite{RatHic19a}.
 %\JRNote{add references}
+% Machine learning reference:
+% Integration over non-negative integrands is a central problem in machine learning (e.g. for model averaging, (hyper-)parameter marginalisation, and computing posterior predictive distributions).
+% https://arxiv.org/pdf/1812.01553v1.pdf
 
 After a suitable variable transformation, the integral may often be expressed as
 \begin{equation}
