Replace old macros.tex by revised one.

--- a/macros.tex
+++ b/macros.tex
@@ -11,52 +11,7 @@
 %%  your macros with the full commands.
 %%
 
-\renewcommand{\email}[1]{\emailname: #1} % change the email address font style
-
-\usepackage{mathptmx}       % selects Times Roman as basic font
-\usepackage{helvet}         % selects Helvetica as sans-serif font
-\usepackage{courier}        % selects Courier as typewriter font
-%\usepackage{type1cm}        % activate if the above 3 fonts are
-%                            % not available on your system
-
-\usepackage{makeidx}         % allows index generation
-\usepackage{graphicx}        % standard LaTeX graphics tool
-                             % when including figure files
-%\usepackage{multicol}        % used for the two-column index
-\usepackage[bottom]{footmisc}% places footnotes at page bottom
-
-\usepackage{latexsym}
-\usepackage{amsmath}
-\usepackage{amsfonts}
-\usepackage{amssymb}
-\usepackage{bm}
-
-\usepackage{url}
-\usepackage{algorithm}
-\usepackage{algorithmic}
-\usepackage[misc,geometry]{ifsym}
-
-% Springer provides the following environments:
-%   case, conjecture, corollary, definition, example, exercise, lemma,
-%   note, problem, property, proposition, question, remark, solution, theorem
-%   claim, proof
-\renewenvironment{proof}{\noindent{\itshape Proof.}}{\smartqed\qed}
-
-% We add two more environments:   assumption, algo
-\spdefaulttheorem{assumption}{Assumption}{\upshape \bfseries}{\itshape}
-\spdefaulttheorem{algo}{Algorithm}{\upshape \bfseries}{\itshape}
-% Note there is also the 'algorithm' environment from the algorithm package
-% which is a floating environment
-
-
-
-% Springer defines the following commands in math mode:
-%   \D upright d for differential d
-%   \I upright i for imaginary unit
-%   \E upright e for exponential function
-%   \tens depicts tensors as sans serif upright
-%   \vec depicts vectors as boldface characters instead of the arrow accent
-
+%% OCTOBER 2021 VERSION
 
 % We add the following commonly used macros:
 
