Updates from Overleaf

--- a/SobolBayesCub-ver-b.tex
+++ b/SobolBayesCub-ver-b.tex
@@ -53,6 +53,11 @@
 % \usepackage{siunitx}
 % \usepackage{bbm}
 
+%%%%%%%%%%%%%%%%%%%%%% Macros from the editors
+%\input{macros.tex}
+%%%%%%%%%%%%%%%%%%%%%% Macros from the editors
+
+
 
 %
 % insert here the call for the packages your document requires
