replacing macros with the suggested

--- a/macros.tex
+++ b/macros.tex
@@ -394,7 +394,7 @@
 \newcommand{\wal}{{\rm wal}}
 \newcommand{\floor}[1]{\left\lfloor #1 \right\rfloor} % floor
 \newcommand{\ceil}[1]{\left\lceil #1 \right\rceil}    % ceil
-\DeclareMathOperator{\cov}{Cov}
-\DeclareMathOperator{\var}{Var}
+% \DeclareMathOperator{\cov}{Cov}
+% \DeclareMathOperator{\var}{Var}
 \providecommand{\argmin}{\operatorname*{argmin}}
 \providecommand{\argmax}{\operatorname*{argmax}}
